name:                portage
version:             0.1.0.0
synopsis:            Haskell types for portage
homepage:            https://github.com/vikraman/portage
license:             GPL-2
license-file:        LICENSE
author:              Vikraman Choudhury
maintainer:          vikraman.choudhury@gmail.com
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Portage.Atom, Portage.Package
  build-depends:       base >=4
  hs-source-dirs:      src
  default-language:    Haskell2010